--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,6 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Add Category{% endblock %}
+{% block title %}
+    {% if edit %}
+        Edit
+    {% else %}
+        Create
+    {% endif %}
+         Category
+{% endblock %}
 
 {% block body %}
 
@@ -8,7 +15,14 @@
 
     <div class="form-wrapper">
 
-        <h1>Add a category</h1>
+        <h1>
+            {% if edit %}
+                Edit
+            {% else %}
+                Create
+            {% endif %}
+            Category
+        </h1>
 
         {{ form_start(categoryForm) }}
 
