--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -3,6 +3,13 @@
 {% block body %}
 
     <h1>{{ category.name }}</h1>
+    <div class="btns">
+        <a class="btn" href="{{ path(name = 'category_edit', parameters = {id: category.id}) }}">Edit</a>
+        <form method="post" action="{{ path('category_delete', {id: category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this category?');">
+            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
+            <button type="submit" class="btn">Delete</button>
+        </form>
+    </div>
 
     <div class="search-wrapper">
         <form class="search-form" action="" method="post">
